# gyptis

./: .coverage  .coverage.mars.44801.112358  .coverage.mars.44808.032772  .gitignore  .gitlab-ci.yml  .pylintrc  .zenodo.json  CHANGELOG.rst  MANIFEST.in  Makefile  README.rst  badges.json  coverage.xml  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sonar-project.properties
.ci/: delete_artifacts.py  installreq
dev/: delete_artifacts.py  gen_bg.py  testenv.py  update_header.py
docs/: Makefile  api.rst  biblio.rst  caroussel.py  cite.rst  conf.py  description.rst  index.rst  indexsearch.rst  installation.rst  mainindex.rst  package-lock.json  postprocess.py  reference.rst  requirements.txt  serve.py  sg_execution_times.rst
docs/_assets/: badge.md  badge.rst  badge.rst.txt  banner.ans  gyptis.ans  gyptis.base64
docs/_custom/: gyptis.mplstyle
docs/_custom/latex/: Exported Items.bib  biblio.bib  gyptis.cls  gyptis.sty
docs/_templates/: class.rst  class_with_call.rst  footer.html  function.rst  home.html  layout.html
docs/binder/: README.md  apt.txt  postBuild
docs/install/: get.gyptis  gyptis.install
docs/texlive/: texlive_install.sh
docs/tutorials/: index.rst  plot_basic.ipynb  plot_basic.py  plot_basic.py.md5  plot_basic.rst  plot_basic_codeobj.pickle  searchindex.dir  sg_execution_times.rst
examples/: README.rst  basic.py
examples/diffraction/: .opt  README.txt  checkerboard_grating.py  grating2d.py  gyptis_pyvista.py  hole_crossed_grating.py  metasurface5.py  plot_2d_to_3d_grating.py  plot_anisotropic_grating.py  plot_dielectric_grating.py  plot_diffraction_efficiencies_3D.py  plot_pec_grating.py  plot_silver_core_shell_grating.py  torus.py
examples/homogenization/: README.txt  _plot_negative_refraction.py  plot_four_phase.py  plot_high_contrast.py  plot_homogenization.py
examples/modal/: README.txt  _plot_phc3D.py  plot_phc.py  plot_phc2D.py  plot_qnm.py  qnms_triangle.csv
examples/scattering/: , cmap="jet", levels=52)  README.txt  _plot_ldos.py  _plot_ldos_TE.py  acs_r2_30nm.csv  dielectric_sphere.py  effs_scatt_cylinder.py  mie.py  plot_cylinder.py  plot_dielectric_sphere.py  plot_ldos.py  plot_nanorod.py  plot_scattering2d_pec_cylinder.py  plot_silver_core_shell.py  plot_sphere.py  scs_pec_TE.csv  scs_r2_30nm.csv  superscatterer.py
examples/sources/: README.txt  plot_sources.py
examples/waveguides/: README.txt  _wg.py  benchmark.py  data_aniso_fig3.csv  data_aniso_fig4.csv  data_aniso_fig7.csv  data_aniso_fig8.csv  plot_anisotropic_waveguide.py
gyptis/: __about__.py  __init__.py  _meta.py  api.py  base.py  bc.py  complex.py  core.py  electrostatics.py  epsilon.cpp  formulation.py  geom.py  geometry.py  grating2d.py  grating3d.py  grating_2d.py  grating_2d_old.py  grating_3d.py  helpers.py  homogenization.py  log.py  materials.py  measure.py  mesh.py  optimize.py  photonic_crystal.py  physics.py  plot.py  plotting.py  sampling.py  scattering2d.py  scattering3d.py  scattering_2d.py  scattering_3d.py  simulation.py  source.py  sources.py  stack.py  subdomain.cpp
gyptis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
gyptis/common/: __init__.py  constants.py  material.py
gyptis/jitfailure-dolfin_expression_2b65bee0952fa0e1d103d0eb0e0e7033/: dolfin_expression_2b65bee0952fa0e1d103d0eb0e0e7033.cpp  recompile.sh
gyptis/jitfailure-dolfin_expression_dfd21bc2a694db0b9c41b4f8526c8f03/: dolfin_expression_dfd21bc2a694db0b9c41b4f8526c8f03.cpp  recompile.sh
gyptis/utils/: __init__.py  _meta.py  helpers.py  jupyter.py  log.py  parallel.py  sample.py
htmlcov/: gyptis___about___py.html  gyptis___init___py.html  gyptis_common___init___py.html  gyptis_common_constants_py.html  gyptis_common_material_py.html  gyptis_complex_py.html  gyptis_core_py.html  gyptis_geom_py.html  gyptis_helpers_py.html  index.html  setup_py.html  status.json  tests_test_box_py.html  tests_test_complex_py.html  tests_test_core_py.html
jitfailure-dolfin_expression_853d013848afe39f70ecb715cd85a8d0/: dolfin_expression_853d013848afe39f70ecb715cd85a8d0.cpp  recompile.sh
jitfailure-dolfin_expression_9724257982258c2113c544fbd9bb6b1b/: dolfin_expression_9724257982258c2113c544fbd9bb6b1b.cpp  recompile.sh
jitfailure-dolfin_expression_9ddd2380ee9805b43f7fe525ab42fec3/: dolfin_expression_9ddd2380ee9805b43f7fe525ab42fec3.cpp  recompile.sh
jitfailure-dolfin_expression_d010d610882e657272e70a38b58dff95/: dolfin_expression_d010d610882e657272e70a38b58dff95.cpp  recompile.sh
src/gyptis/: __about__.py  __init__.py  _submesh.py  api.py  bc.py  complex.py  formulation.py  geometry.py  grating3d.py  homogenization.py  materials.py  measure.py  mesh.py  optimize.py  phc2d.py  phc3d.py  plot.py  simulation.py  source.py  spharm.py  stack.py
src/gyptis/formulations/: __init__.py  _high_contrast.py  formulation.py  maxwell2d.py  maxwell2dbands.py  (+8 more)
tests/: .opt  _test_hchom2d.py  _test_hom3d.py  _test_phc3d.py  adj.py  adj_sub.py  bug_gmsh.py  debug.py  electrostatics.py  ex_simulation.py  grating_2d_pytheas.py  grating_3d.py  grating_3d_old.py  grating_3d_pytheas.py  min_parallel_int.py  mpitests.py  parallel_int.py  pec.py  simple3Dmaxwell.py  simple_test.py  test.geo_unrolled  test_adjoint.py  test_adjoint_scatt.py  test_adjoint_scattering2d.py  test_bc.py  test_compiler.py  test_complex.py  test_core.py  test_formulation.py  test_geom.py  test_geometry.py  test_grating2d.py  test_grating3d.py  test_grating_2d.py  test_grating_3d.py  test_hchom2d.py  test_helpers.py  test_hom2d.py  test_hom3d.py  test_homogenization.py  (+20 more)
tests/data/: mesh.msh  sphere_diel.csv
tests/mpi/: geo_para.py  min_parallel_int.py  mpitests.py  parallel_int.py  run_mpi.py
tutorials/: README.rst  plot_optim.py
tutorials/basic/: plot_basic.py  plot_optim.py
tutorials/optimization/: plot_optim.py
(+52 files in other folders)
