[metadata]
name = gyptis
version = 0.4.0
author = Benjamin Vial
email = benjamin.vial84@gmail.com
description = Computational Photonics in Python
url = https://gitlab.com/gyptis/gyptis
project_urls =
    Code=https://gitlab.com/gyptis/gyptis
    Documentation=https://gyptis.gitlab.io
    Issues=https://gitlab.com/gyptis/gyptis/issues
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
keywords =
    finite element method
    diffraction
    scattering
    optics
    photonics
    metamaterials
    modal analysis

[options]
include_package_data = True
package_dir =
    =src
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    numpy >= 1.9
    scipy >= 1.0
    simpy
    dolfin-adjoint
    meshio
    gmsh
    nlopt
    joblib
    psutil
    ipython
    loguru

python_requires = >=3.6
setup_requires =
    setuptools>=42
    wheel

[options.packages.find]
where=src


[options.package_data]
# If any package or subpackage contains *.txt or *.rst files, include them:
* = *.txt, *.rst, *.csv, *.cpp
