[metadata]
name = gyptis
version = 1.0.3
author = Benjamin Vial
email = benjamin.vial84@gmail.com
description = Computational Photonics in Python
url = https://gitlab.com/gyptis/gyptis
project_urls =
    Code=https://gitlab.com/gyptis/gyptis
    Documentation=https://gyptis.gitlab.io
    Issues=https://gitlab.com/gyptis/gyptis/issues
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
keywords =
    finite element method
    diffraction
    scattering
    optics
    photonics
    metamaterials
    modal analysis

[options]
include_package_data = True
package_dir =
    =src
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    numpy >= 1.9
    scipy >= 1.0
    matplotlib
    pyvista
    sympy
    dolfin-adjoint
    meshio
    joblib
    psutil
    ipython
    loguru

python_requires = >=3.8
setup_requires =
    setuptools>=42
    wheel

[options.packages.find]
where=src


[options.package_data]
# If any package or subpackage contains *.txt or *.rst files, include them:
* = *.cpp


[options.extras_require]
mesh = gmsh
opt = nlopt
full = gyptis[mesh];  gyptis[opt]